# maisoku

./: .gitattributes  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  TASKS.md  apply_results.tsv  apply_results_10.tsv  index.tsx  main.py  models.py  naming.py  ocr_extractor.py  package.json  preview.tsv  preview_ocr.tsv  preview_ocr_base.tsv  preview_ocr_tuned.tsv  pyproject.toml  requirements.txt  test_ocr_preview.tsv  utils.py
.github/workflows/: ci.yml
docs/plans/: mysoku_rename_plan.md
docs/specs/: mysoku_rename_spec.md
frontend/: package-lock.json  package.json
frontend/pages/: index.tsx
samples/: README.md
scripts/: dev.sh  gen_sample_pdfs.py  rollback_from_tsv.py  stop.sh
src/mysoku_renamer/: cli.py  file_manager.py  file_namer.py  info_parser.py  ocr.py  openai_infer.py  pdf_processor.py  price_normalizer.py  property_cleaner.py  tsv_logger.py  types.py
tests/: test_file_manager.py  test_file_namer.py  test_info_parser.py  test_ocr_option.py  test_openai_infer.py  test_pdf_processor.py  test_price_normalizer.py  test_property_cleaner.py  test_rollback_from_tsv.py  test_tsv_logger.py
tests/acceptance/: __init__.py  test_acceptance_cli.py
